<resources>
    <string name="app_name">TheMovies</string>
    <string name="bottom_nav_1">Popular</string>
    <string name="bottom_nav_2">Search</string>
    <string name="bottom_nav_3">Favourites</string>
    <string name="bottom_nav_4">Upcoming</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_year">Year</string>
    <string name="movie_genres">Genres</string>
    <string name="movie_runtime">Runtime</string>
    <string name="movie_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="movie_rating">8.5 / 10</string>
    <string name="movie_vote_count">Vote Count</string>
    <string name="movie_tagline">Tagline</string>
    <string name="movie_cast_text">Cast</string>
    <string name="movie_cast_name">Actor Name</string>
    <string name="movie_cast_character">Character</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="profile_name_tag">Name</string>
    <string name="profile_name_text">User Name</string>
    <string name="profile_email_tag">Email</string>
    <string name="profile_email_text">User Email</string>
    <string name="facebook_app_id">1962369470583461</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favs">Remove from Favourites</string>


</resources>